<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">


    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="250dp"
        android:id="@+id/imageUploadLayout"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:background="@drawable/layout_borders"
        android:layout_margin="10dp">

        <ImageView
            android:layout_marginTop="10dp"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/originalImageView"
            android:src="@drawable/ktu_test_img"
            android:layout_gravity="center_horizontal"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_original_image"
            android:layout_gravity="center"
            android:textStyle="bold"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/uploadImgButton"
            android:text="@string/btn"
            android:layout_gravity="center"
            android:layout_margin="10dp"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:id="@+id/cryptoBtnLayout"
        android:layout_gravity="center"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/crypto_button"
            android:text="@string/crypto_btn_text"
            android:layout_gravity="center"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="250dp"
        android:id="@+id/sharedImagesLayout"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:background="@drawable/layout_borders">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/shareOneLayout"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp">
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:id="@+id/sharedOneImageView"
                android:src="@drawable/nopicture"
                android:background="@drawable/layout_borders"
                />
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_share_one_image"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:layout_margin="5dp"/>
        </LinearLayout>
       
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/shareTwoLayout"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp">
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:id="@+id/sharedTwoImageView"
                android:src="@drawable/nopicture"
                android:background="@drawable/layout_borders"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_share_two_image"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:layout_margin="5dp"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>